--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "node-sass": "^4.5.0",
     "protractor": "~4.0.13",
+    "sass-loader": "^6.0.2",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "~2.0.3",
+    "webpack": "^2.2.1"
   }
 }
