--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.4.9",
     "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "^3.4.9",
+    "angular-in-memory-web-api": "^0.2.0",
     "@types/node": "^6.0.64",
     "codelyzer": "^2.0.1",
     "core-js": "^2.4.1",
